--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,15 +66,6 @@ jobs:
           path: dist
           retention-days: 1
 
-      - name: Debug GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-
-      - name: Get PR branch name
-        run: |
-          echo "PR branch name is: ${{ GITHUB_HEAD_REF }}"
-
       - name: Preview release
         id: preview
         env:
@@ -86,7 +77,7 @@ jobs:
           echo "" >> preview.md
           
           # Run dry-run
-          if OUTPUT=$(npx semantic-release --dry-run --no-ci --branches "*" --plugins "@semantic-release/commit-analyzer,@semantic-release/release-notes-generator" 2>&1); then
+          if OUTPUT=$(npx semantic-release --dry-run --no-ci --branches "$GITHUB_HEAD_REF" --plugins "@semantic-release/commit-analyzer,@semantic-release/release-notes-generator" 2>&1); then
             echo "Semantic Release Dry Run Output:"
             echo "$OUTPUT"
             if echo "$OUTPUT" | grep -q "Release note for version"; then
