--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
           echo "" >> preview.md
           
           # Run dry-run
-          if OUTPUT=$(npx semantic-release --dry-run --no-ci --branches "$GITHUB_HEAD_REF" --plugins "@semantic-release/commit-analyzer,@semantic-release/release-notes-generator" 2>&1); then
+          if OUTPUT=$(npx semantic-release --dry-run --no-ci --branches "$GITHUB_REF" --plugins "@semantic-release/commit-analyzer,@semantic-release/release-notes-generator" 2>&1); then
             echo "Semantic Release Dry Run Output:"
             echo "$OUTPUT"
             if echo "$OUTPUT" | grep -q "Release note for version"; then
