--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,7 +81,7 @@ jobs:
           echo "" >> preview.md
           
           # Run dry-run
-          if OUTPUT=$(npx semantic-release --dry-run --no-ci --branches "${{ github.ref }}" --plugins "@semantic-release/commit-analyzer,@semantic-release/release-notes-generator" 2>&1); then
+          if OUTPUT=$(npx semantic-release --dry-run --no-ci --branches "${{ github.ref }}" --plugins "@semantic-release/commit-analyzer, @semantic-release/release-notes-generator, @semantic-release/changelog" 2>&1); then
             if echo "$OUTPUT" | grep -q "Release note for version"; then
               VERSION=$(echo "$OUTPUT" | grep -oP 'The next release version is \K[0-9]+\.[0-9]+\.[0-9]+')
               echo "🚀 **A new release would be created: \`v$VERSION\`**" >> preview.md
