ci: change branch matching pattern for dry run

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -13,7 +13,7 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "node scripts/prepare-release.js ${nextRelease.version}"
+        "prepareCmd": "node ..github/scripts/prepare-release.js ${nextRelease.version}"
       }
     ],
     [
