ci: switch to use github.ref_name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,8 +75,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          chmod +x .github/scripts/preview-release.sh 
-          .github/scripts/preview-release.sh
+          chmod +x .github/scripts/preview-release.sh
+          .github/scripts/preview-release.sh {{ github.ref_name }}
 
       - name: Comment PR
         uses: actions/github-script@v7
