--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,10 +1,6 @@
 {
   "branches": [
-    "main",
-    {
-      "name": "refs/pull/*",
-      "prerelease": true
-    }
+    "main"
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
