--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           chmod +x .github/scripts/preview-release.sh
-          .github/scripts/preview-release.sh ${{ github.ref_name }}
+          .github/scripts/preview-release.sh ${{ github.head_ref }}
 
       - name: Comment PR
         uses: actions/github-script@v7
