ci: add ci and feat branch patterns to releaserc

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,6 +1,14 @@
 {
   "branches": [
-    "main"
+    "main",
+    {
+      "name": "ci/*",
+      "prerelease": true
+    },
+    {
+      "name": "feat/*",
+      "prerelease": true
+    }
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
