--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          # Trick semantic-release into thinking we're not in a CI environment
+          unset GITHUB_ACTIONS
+          unset GITHUB_EVENT_NAME
           chmod +x .github/scripts/preview-release.sh
           .github/scripts/preview-release.sh ${{ github.head_ref }}
 
