ci: try an alternative approach to executing the dry run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,15 @@ jobs:
           path: dist
           retention-days: 1
 
+      - name: 🔬 Check semantic versioning
+        id: semantic-release
+        run: |
+          GITHUB_REF=${{ github.head_ref }}
+          npx semantic-release --no-ci --dry-run --plugins @semantic-release/commit-analyzer,@semantic-release/release-notes-generator --branches ${{ github.head_ref }} > output.txt
+          OUTPUT=$(cat output.txt | base64 -w 0)
+          echo $OUTPUT
+          echo "name=releaseNote::$OUTPUT" >> $GITHUB_OUTPUT
+
       - name: Preview release
         id: preview
         env:
