--- a/.releaserc.json
+++ b/.releaserc.json
@@ -22,7 +22,7 @@
       "@semantic-release/git",
       {
         "assets": ["package.json", "CHANGELOG.md", "dist/module.json"],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        "message": "chore(release): ${nextRelease.version} [skip ci]"
       }
     ],
     [
