--- a/.releaserc.json
+++ b/.releaserc.json
@@ -15,14 +15,14 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "node .github/scripts/prepare-release.js ${nextRelease.version}"
+        "prepareCmd": "node ../.github/scripts/prepare-release.js ${nextRelease.version}"
       }
     ],
     [
       "@semantic-release/git",
       {
         "assets": ["package.json", "CHANGELOG.md", "dist/module.json"],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        "message": "chore(release): ${nextRelease.version} [skip ci]"
       }
     ],
     [
