--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -2,6 +2,6 @@
   "extends": ["@commitlint/config-conventional"],
   "rules": {
     "body-max-line-length": [0, "always", 500],
-    "head-max-length": [0, "always", 150]
+    "header-max-length": [0, "always", 150]
   }
 }
